# Chess

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/chess_manager/: CMakeLists.txt  chess_manager.cpp  chess_manager.h
src/chess_pieces/: CMakeLists.txt  piece_defines.h
src/chess_pieces/pieces/: bishop_piece.cpp  bishop_piece.h  chess_piece.h  chess_piece_impl.h  king_piece.cpp  king_piece.h  knight_piece.cpp  knight_piece.h  pawn_piece.cpp  pawn_piece.h  queen_piece.cpp  queen_piece.h  rook_piece.cpp  rook_piece.h
src/core/: game_defines.h  game_settings.h  position.h
user_interface/: CMakeLists.txt  user_interface.cpp  user_interface.h
